Updating the page title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./src//assets/joshua-mugabo-website-favicon-color.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joshua - Portfolio</title>
+    <title>Joshua MUGABO</title>
   </head>
   <body>
     <div id="root"></div>
